--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   "devDependencies": {
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.0",
+    "grunt": "^1.0.1",
+    "grunt-contrib-stylus": "^1.2.0",
+    "grunt-contrib-watch": "^1.0.0",
     "style-loader": "^0.18.2",
+    "stylus-loader": "^3.0.1",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "vuetify": "^0.16.4",
