--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "webpack --progress"
+    "build": "webpack --progress --watch"
   },
   "author": "",
   "license": "ISC",
