--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "style-loader": "^0.18.2",
     "stylus-loader": "^3.0.1",
+    "url-loader": "^0.6.2",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "vuetify": "^0.16.4",
