--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "express": "^4.16.1",
     "jquery": "^3.2.1",
     "socket.io": "^2.0.3",
@@ -20,11 +21,13 @@
   },
   "devDependencies": {
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.0",
     "grunt": "^1.0.1",
     "grunt-contrib-stylus": "^1.2.0",
     "grunt-contrib-watch": "^1.0.0",
     "jquery": "^3.2.1",
+    "json-loader": "^0.5.7",
     "style-loader": "^0.18.2",
     "stylus-loader": "^3.0.1",
     "url-loader": "^0.6.2",
